--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -135,8 +135,8 @@
                 </div>
 
                 <div class="pad-up-bottom">
-                    <button type="button" id="add-pop-claim" class="btn btn-success" (click)="openDialogPopUp()">Add a
-                        Popup Claim
+                    <button type="button" id="add-pop-claim" class="btn btn-success" (click)="openDialogPopUp()">
+                        Add a New Claim
                     </button>
                 </div>
                 <div>
