--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck-update.component.html
@@ -96,12 +96,32 @@
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.tag" for="field_tag">Tag</label>
                     <br>
+                    <input [(ngModel)]="searchTagKeyword" [ngModelOptions]="{standalone: true}">
+                    <button type="button" class="btn btn-success" (click)="searchTagCurrentPage=0;searchTags()">
+                        Search Tag
+                    </button>
+                    <button type="button" class="btn btn-success" (click)="getAllTags()">
+                        Reset
+                    </button>
+                    <br>
                     <jhi-multiple-checkbox id="field_tag"
                                            [option_list]="all_tag_options"
                                            [selected_options]="selected_tag_options"
                                            (updated_selection)="update_tag_selection($event)">
 
                     </jhi-multiple-checkbox>
+                    <button type="button"
+                            class="btn btn-success"
+                            (click)="searchTagCurrentPage=searchTagCurrentPage-1;searchTags()"
+                            *ngIf="searchTagCurrentPage>0">
+                        Previous
+                    </button>
+                    <button type="button"
+                            class="btn btn-success"
+                            (click)="searchTagCurrentPage=searchTagCurrentPage+1;searchTags()"
+                            *ngIf="searchTagTotalResult>((searchTagCurrentPage+1)*searchResultPerPage)">
+                        Next
+                    </button>
                 </div>
                 <div class="form-group">
                     <label jhiTranslate="gatewayApp.corePost.category" for="field_category">Category</label>
