--- a/src/main/webapp/app/entities/factcheck/claim/new-claim-popup.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/new-claim-popup.component.html
@@ -2,8 +2,9 @@
     <form [formGroup]="claimFormGroup">
         <div class="row justify-content-center">
             <div class="col-8">
-                <h2 id="jhi-claim-heading" jhiTranslate="gatewayApp.factcheckClaim.home.createOrEditLabel">Create or edit a
-                    Claim</h2>
+                <h2 id="jhi-claim-heading" jhiTranslate="gatewayApp.factcheckClaim.home.createOrEditLabel">
+                    Create or edit a Claim
+                </h2>
                 <div class="mt-5">
                     <div class="row">
                         <div class="col-md-12">
@@ -32,14 +33,16 @@
                     <div class="row mt-5">
                         <div class="col-md-6">
                             <mat-form-field class="w-100">
-                                <input matInput [matDatepicker]="picker_1" formControlName="claimDate" placeholder="Choose Claim Date">
+                                <input matInput [matDatepicker]="picker_1" formControlName="claimDate"
+                                       placeholder="Choose Claim Date">
                                 <mat-datepicker-toggle matSuffix [for]="picker_1"></mat-datepicker-toggle>
                                 <mat-datepicker #picker_1 startView="year"></mat-datepicker>
                             </mat-form-field>
                         </div>
                         <div class="col-md-6">
                             <mat-form-field class="w-100">
-                                <input matInput [matDatepicker]="picker_2" formControlName="checkedDate" placeholder="Choose Checked Date">
+                                <input matInput [matDatepicker]="picker_2" formControlName="checkedDate"
+                                       placeholder="Choose Checked Date">
                                 <mat-datepicker-toggle matSuffix [for]="picker_2"></mat-datepicker-toggle>
                                 <mat-datepicker #picker_2 startView="year"></mat-datepicker>
                             </mat-form-field>
@@ -121,7 +124,8 @@
                     <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState(null)">
                         <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
                     </button>
-                    <button type="button" (click)="save()" id="save-entity" [disabled]="isSaving" class="btn btn-primary ml-3">
+                    <button type="button" (click)="save()" id="save-entity" [disabled]="isSaving"
+                            class="btn btn-primary ml-3">
                         <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
                     </button>
                 </div>
