--- a/src/main/webapp/app/entities/core/tag/tag.component.html
+++ b/src/main/webapp/app/entities/core/tag/tag.component.html
@@ -78,10 +78,11 @@
                             <div [routerLink]="['/tag', element.id, 'edit']">
                                 <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             </div>
-                            <div [routerLink]="['/', { outlets: { popup: 'tag/'+ element.id + '/delete'} }]"
-                                 replaceUrl="true"
-                                 queryParamsHandling="merge">
-                                <fa-icon [icon]="'times'"></fa-icon>
+                            <div>
+                                <span (click)="openDialogPopUp(element)">
+                                    <fa-icon [icon]="'times'">
+                                    </fa-icon>
+                                </span>
                             </div>
                         </div>
                     </td>
