--- a/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
+++ b/src/main/webapp/app/entities/factcheck/factcheck/factcheck.component.html
@@ -111,10 +111,8 @@
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'factcheck/'+ factcheck.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
+                        <button type="button"
+                                (click)="openDialogPopUp(factcheck)"
                                 class="btn btn-danger btn-sm">
                             <fa-icon [icon]="'times'"></fa-icon>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
