--- a/src/main/webapp/app/shared/quill-editor/quill-editor.component.scss
+++ b/src/main/webapp/app/shared/quill-editor/quill-editor.component.scss
@@ -12,3 +12,16 @@
     top: 0px;
     bottom: 0px;
 }
+
+:host ::ng-deep .ql-toolbar {
+    background: #b8c1c8;
+    border-bottom: 1px solid #989ea4;
+    border-top: 1px solid #717d85;
+    color: #fff;
+    margin: 0;
+    padding: 2px 0 0 12px;
+    position: -webkit-sticky;
+    position: sticky;
+    z-index: 2;
+    top: -50px;
+}
