--- a/src/main/webapp/app/entities/core/post/post.component.html
+++ b/src/main/webapp/app/entities/core/post/post.component.html
@@ -1,32 +1,34 @@
-<div>
-    <h2 id="page-heading">
-        <span jhiTranslate="gatewayApp.corePost.home.title">Posts</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-post"
-                [routerLink]="['/post/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span class="hidden-sm-down" jhiTranslate="gatewayApp.corePost.home.createLabel">
-            Create new Post
-            </span>
-        </button>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <div class="row">
-        <div class="col-sm-12">
-            <form name="searchForm" class="form-inline">
-                <div class="input-group w-100 mt-3">
-                    <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch"
+<div class="p-2">
+    <div class="row mt-5">
+        <div class="col-md-5">
+            <h2 id="page-heading">
+                <span jhiTranslate="gatewayApp.corePost.home.title">Posts</span>
+            </h2>
+        </div>
+        <div class="col-md-7">
+            <form name="searchForm" class="d-flex align-content-center justify-content-end">
+                <mat-form-field>
+                    <input matInput type="text" [(ngModel)]="currentSearch" id="currentSearch"
                            name="currentSearch" placeholder="{{ 'gatewayApp.corePost.home.search' | translate }}">
-                    <button class="input-group-append btn btn-info" (click)="search(currentSearch)">
-                        <fa-icon [icon]="'search'"></fa-icon>
-                    </button>
-                    <button class="input-group-append btn btn-danger" (click)="clear()" *ngIf="currentSearch">
-                        <fa-icon [icon]="'trash-alt'"></fa-icon>
+                </mat-form-field>
+                <button mat-icon-button mat-raised-button  class="mr-2" (click)="search(currentSearch)">
+                    <mat-icon>search</mat-icon>
+                </button>
+                <button mat-icon-button mat-raised-button color="warn"  class="mr-3" (click)="clear()" *ngIf="currentSearch">
+                    <mat-icon class="white">delete_outline</mat-icon>
+                </button>
+                <div>
+                    <button mat-button mat-raised-button color="primary"
+                            id="jh-create-entity" class="jh-create-entity create-post"
+                            [routerLink]="['/post/new']">
+                        <fa-icon [icon]="'plus'"></fa-icon>
+                        <span class="hidden-sm-down" jhiTranslate="gatewayApp.corePost.home.createLabel">Create new Post</span>
                     </button>
                 </div>
             </form>
         </div>
     </div>
-    <br/>
+    <jhi-alert></jhi-alert>
     <div class="custom-list-view" *ngIf="posts">
         <div class="acttion-bar-wrap">
             <div class="sort-button" [ngClass]="{'up': !sortList}">
