--- a/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-update.component.html
@@ -74,17 +74,16 @@
                     <mat-checkbox id="field_isDefault" name="isDefault" [(ngModel)]="rating.isDefault">{{'gatewayApp.factcheckRating.isDefault' | translate }}</mat-checkbox>
                 </div>
                 <div class="form-group">
-                    <div class="mb-3"><img src={{rating.iconURL}} height="100"></div>
                     <button mat-raised-button color="primary"
                         id="field_iconURL" class="btn btn-primary jh-create-entity create-media"
                             (click)="choseMediaforFeature()" type="button">
                         <fa-icon [icon]="'plus'"></fa-icon>
-                        <span class="hidden-sm-down"  jhiTranslate="gatewayApp.coreMedia.home.uploadMediaLabel">
-                            Upload Media
+                        <span class="hidden-sm-down"  jhiTranslate="gatewayApp.factcheckRating.uploadRatingIcon">
+                            Upload Rating Icon
                         </span>
                     </button>
-                    <div *ngIf="rating.iconURL">
-                        <span [(ngModel)]="rating.iconURL" name="iconURL" ngDefaultControl></span>
+                    <div *ngIf="rating.mediaDTO" class="margin-t-20">
+                        <img src={{rating.mediaDTO.url}} alt="" width="100" height="100">
                     </div>
                 </div>
                 <div class="d-flex justify-content-end">
