--- a/src/main/webapp/app/entities/core/organization/organization.component.html
+++ b/src/main/webapp/app/entities/core/organization/organization.component.html
@@ -219,12 +219,11 @@
                             <div [routerLink]="['/organization', element.id, 'edit']">
                                 <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             </div>
-                            <div
-                                [routerLink]="['/', { outlets: { popup: 'organization/'+ element.id + '/delete'} }]"
-                                replaceUrl="true"
-                                queryParamsHandling="merge"
-                            >
-                                <fa-icon [icon]="'times'"></fa-icon>
+                            <div>
+                                <span (click)="openDialogPopUp(element)">
+                                    <fa-icon [icon]="'times'">
+                                    </fa-icon>
+                                </span>
                             </div>
                         </div>
                     </td>
