--- a/src/main/webapp/app/entities/core/post/post.component.html
+++ b/src/main/webapp/app/entities/core/post/post.component.html
@@ -11,10 +11,15 @@
                     <input matInput type="text" [(ngModel)]="currentSearch" id="currentSearch"
                            name="currentSearch" placeholder="{{ 'gatewayApp.corePost.home.search' | translate }}">
                 </mat-form-field>
-                <button mat-icon-button mat-raised-button  class="mr-2" (click)="search(currentSearch)">
+                <button mat-icon-button mat-raised-button class="mr-2" (click)="search(currentSearch)">
                     <mat-icon>search</mat-icon>
                 </button>
-                <button mat-icon-button mat-raised-button color="warn"  class="mr-3" (click)="clear()" *ngIf="currentSearch">
+                <button mat-icon-button
+                        mat-raised-button
+                        color="warn"
+                        class="mr-3"
+                        (click)="clear()"
+                        *ngIf="currentSearch">
                     <mat-icon class="white">delete_outline</mat-icon>
                 </button>
                 <div>
@@ -22,7 +27,8 @@
                             id="jh-create-entity" class="jh-create-entity create-post"
                             [routerLink]="['/post/new']">
                         <fa-icon [icon]="'plus'"></fa-icon>
-                        <span class="hidden-sm-down" jhiTranslate="gatewayApp.corePost.home.createLabel">Create new Post</span>
+                        <span class="hidden-sm-down"
+                              jhiTranslate="gatewayApp.corePost.home.createLabel">Create new Post</span>
                     </button>
                 </div>
             </form>
@@ -48,7 +54,9 @@
         </div>
         <div class="content-block-wrap">
             <div class="content-block" *ngFor="let post of posts ;trackBy: trackId">
-                <div *ngIf="post.media" class="image-wrap" [style.backgroundImage]="'url('+ post.media.sourceURL + '?resize:fill:250/gravity:sm'+ ')'">
+                <div *ngIf="post.media"
+                     class="image-wrap"
+                     [style.backgroundImage]="'url('+ post.media.sourceURL + '?resize:fill:250/gravity:sm'+ ')'">
                 </div>
                 <div class="main-content">
                     <div><h2 [routerLink]="['/post', post.id, 'view' ]">{{post.title}}</h2></div>
@@ -58,7 +66,8 @@
                     <div class="author-details-wrap">
                         <div class="author-details-text">
                             <p class="created-by"><i>Created By</i></p>
-                            <p class="author-name"><span *ngFor="let author of post.degaUsers; index as i">{{author.firstName}} {{i != post.degaUsers.length -1 ?  '| ': ''}}</span>
+                            <p class="author-name">
+                                <span *ngFor="let author of post.degaUsers; index as i">{{author.firstName}} {{i != post.degaUsers.length - 1 ? '| ' : ''}}</span>
                             </p>
                             <p class="status"><span class="created-by">Status: </span>{{post.statusName}}</p>
                         </div>
@@ -74,6 +83,14 @@
                                         <fa-icon [icon]="'eye'"
                                                  [routerLink]="['/post', post.id, 'view' ]">
                                         </fa-icon>
+                                </span>
+                            </div>
+                            <div>
+                                <span matTooltip="Create a copy of Post"
+                                      (click)="openCopyDialogPopUp(post)"
+                                      [matTooltipPosition]="'above'">
+                                    <fa-icon [icon]="'copy'">
+                                    </fa-icon>
                                 </span>
                             </div>
                             <div>
